# eeee346_project3

./: CMakeLists.txt  DifferentialDriveRobot.cpp  DifferentialDriveRobot.h  MobileRobot.cpp  MobileRobot.h  OmnidirectionalDriveRobot.cpp  OmnidirectionalDriveRobot.h  README.md  Robot.cpp  Robot.h  Wheel.cpp  Wheel.h  main.cpp  runDiffForward.bash  runDiffForwardRight.bash  runDiffRotRight.bash  runOmniForward.bash  runOmniLeft.bash  runOmniRotRight.bash
golden/: solDiffForward.txt  solDiffForwardRight.txt  solDiffRotRight.txt  solOmniForward.txt  solOmniLeft.txt  solOmniRotRight.txt
inputs/: testDiffForwardRight.txt  testDiffRotRight.txt  testOmniLeft.txt  testOmniRotRight.txt
